--- a/public/css/menu.css
+++ b/public/css/menu.css
@@ -18,8 +18,8 @@ body {
 
 .main-container {
   display: flex;
-  width: 834px;
-  height: 1194px;
+  width: 100%;
+  height: 100%;
   flex-direction: column;
   align-items: flex-start;
   background-color: var(--primary-color);
@@ -36,13 +36,12 @@ body {
   flex-shrink: 0;
   align-self: stretch;
   flex-wrap: wrap;
-  background: url(../images/tapas-achtergrond.png) lightgray 50% / cover
-    no-repeat;
+  background: url(../images/tapas2.png) lightgray 50% / cover no-repeat;
 }
 
 .top-nav {
   display: flex;
-  width: 814px;
+  width: 100%;
   padding-top: 10px;
   justify-content: space-between;
   align-items: center;
@@ -282,14 +281,6 @@ body {
   font-weight: 700;
   line-height: normal;
   letter-spacing: 2.2px;
-}
-
-.onder-style {
-  display: flex;
-  width: 832px;
-  height: 42px;
-  left: 1px;
-  background: url(../images/onderstyle.png) 50% / cover no-repeat;
 }
 
 /* Modal styling */
