--- a/public/css/menu.css
+++ b/public/css/menu.css
@@ -8,6 +8,8 @@ body {
   display: flex;
   padding: 0;
   margin: 0;
+  width: 100%;
+  height: 100vh;
   font-family: "League Spartan", sans-serif; /* Voeg sans-serif als fallback toe */
   font-size: 32px;
   font-style: normal;
@@ -27,7 +29,6 @@ body {
 
 .nav {
   display: flex;
-  height: 30%;
   width: 100%;
   padding: 10px 10px 0px 10px;
   justify-content: space-between;
@@ -187,27 +188,28 @@ body {
 
 .main-content-container {
   display: flex;
-  height: 60%;
+  height: 75%; /* Takes 70% of the .main-container */
   width: 100%;
 }
 
 .content-container {
   display: flex;
-  height: 60%;
+  height: 96%;
   width: 100%;
-  padding: 20px;
-  align-items: flex-start;
+  align-items: center;
+  justify-content: center;
   align-content: flex-start;
   gap: 20px 30px;
   flex-shrink: 0;
   align-self: stretch;
   flex-wrap: wrap;
-  background-color: #000;
+  padding-top: 20px;
+  overflow: scroll;
 }
 
 .placeholder-container {
   display: flex;
-  width: 244px;
+  width: 260px;
   height: 392px;
   flex-direction: column;
   align-items: center;
@@ -290,6 +292,25 @@ body {
   font-weight: 700;
   line-height: normal;
   letter-spacing: 2.2px;
+}
+
+.onder-style-container {
+  display: flex;
+  width: 100%;
+  height: 10%;
+  justify-content: center;
+  align-self: center;
+  left: 1px;
+}
+
+.onder-style {
+  display: flex;
+  width: 900px;
+  height: 50px;
+  margin-top: 45px;
+  justify-content: center;
+  align-items: center;
+  background: url(../images/onderstyle.png) 50% / cover no-repeat;
 }
 
 /* Modal styling */
