--- a/public/css/table.css
+++ b/public/css/table.css
@@ -1,211 +1,181 @@
-:root {
-  --primary-color: #dea30c;
-  --logo-rood: #a62f1e;
-  --placeholder-geel: #ffd057;
-}
-
-body {
+#app section {
   display: flex;
-  padding: 0;
-  margin: 0;
-  width: 100%;
-  height: 100vh;
-}
-
-.main-container {
-  display: flex;
-  width: 100%;
-  height: 100%;
+  align-items: center;
+  justify-content: center;
   flex-direction: column;
-  align-items: flex-start;
-  background-color: var(--primary-color);
 }
-
-.nav {
-  display: flex;
-  height: 263px;
-  padding: 10px 10px 0px 10px;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 10px;
-  flex-shrink: 0;
-  align-self: stretch;
-  background: url(../images/tapas-achtergrond.png) 50% / cover no-repeat;
+#app section * {
+  width: 20%;
 }
-
-.top-nav {
-  display: flex;
+#app section .container {
+  aspect-ratio: 1;
+  background-image: url(../images/welcome_1.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-size: 80%;
+}
+#app section button {
+  height: 7.5%;
+  border-radius: 10px;
+  font-weight: bolder;
+  font-size: 125%;
+  color: white;
+  background-color: #a62f1e;
+  border: 3px solid black;
+  cursor: pointer;
+}
+#app section .circle {
+  display: none;
+}
+#app section #tooltip {
+  position: absolute;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  padding: 25px;
+  z-index: 1000;
+  display: none;
+}
+#app section #tooltip * {
   width: 100%;
-  padding-top: 10px;
-  justify-content: space-between;
-  align-items: center;
+  height: 80%;
 }
-
-.nav-links {
+#app section #tooltip #header {
+  height: 20%;
+}
+#app section #tooltip #section div {
   display: flex;
+}
+#app section #tooltip #footer {
+  margin-top: 20px;
+  display: flex;
+}
+#app section #tooltip strong {
+  font-size: 1.2em;
+  color: #333;
+  display: block;
+  margin-bottom: 5px;
+}
+#app section #tooltip div label {
+  display: block;
+  margin: 5px 0;
+  cursor: pointer;
+}
+#app section #tooltip div input[type=checkbox] {
+  margin-right: 2px;
+}
+#app section #tooltip button {
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  padding: 8px 12px;
+  margin-right: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+#app section #tooltip button:hover {
+  background-color: #0056b3;
+}
+#app section #tooltip button:last-child {
+  margin-right: 0;
+}
+#app section #circle {
+  width: 20%;
+  min-width: 200px;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  background-color: brown;
+  position: relative;
+}
+#app section #circle div {
+  width: 15%;
+  aspect-ratio: 1;
+  border: 5px solid black;
+  border-radius: 50%;
+  left: 50%;
+  top: 50%;
+  position: absolute;
+  display: flex;
+  align-items: center;
   justify-content: center;
-  align-items: center;
 }
-
-.hamburger-button {
-  width: 64.8px;
-  height: 69.9px;
-  border: 0;
-  background: url(../images/hamburger.png) 50% / cover;
+#app section #circle div:nth-child(1) {
+  transform: translate(calc(-50% + 400%), calc(-50% + 0%));
 }
-
-.logo-container {
-  width: 99px;
-  height: 95px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: var(--logo-rood);
+#app section #circle div:nth-child(2) {
+  transform: translate(calc(-50% + 369.5518130045%), calc(-50% + 153.073372946%));
 }
-
-.logo {
-  width: 90px;
-  height: 90px;
-  background: url(../images/LasTapas.svg) 50% / contain no-repeat;
+#app section #circle div:nth-child(3) {
+  transform: translate(calc(-50% + 282.8427124746%), calc(-50% + 282.8427124746%));
 }
-
-.card-container {
-  display: flex;
-  width: 213px;
-  padding: 10px;
-  justify-content: flex-end;
-  align-items: center;
-  gap: 10px;
-  flex-shrink: 0;
-  background-color: var(--logo-rood);
+#app section #circle div:nth-child(4) {
+  transform: translate(calc(-50% + 153.073372946%), calc(-50% + 369.5518130045%));
 }
-
-.card-button {
-  width: 42px;
-  height: 39px;
-  flex-shrink: 0;
-  border: 0;
-  background: url(../images/shoppingcart.png) 50% / cover;
+#app section #circle div:nth-child(5) {
+  transform: translate(calc(-50% + 0%), calc(-50% + 400%));
 }
-
-.main-content-container {
-  display: flex;
-  height: 75%;
-  padding: 50px;
-  padding-bottom: 0;
-  flex-direction: column;
-  align-items: center;
-  gap: 10px;
-  flex-shrink: 0;
-  align-self: stretch;
+#app section #circle div:nth-child(6) {
+  transform: translate(calc(-50% + -153.073372946%), calc(-50% + 369.5518130045%));
 }
-
-.content-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  flex: 1 0 0;
-  align-self: stretch;
+#app section #circle div:nth-child(7) {
+  transform: translate(calc(-50% + -282.8427124746%), calc(-50% + 282.8427124746%));
 }
-
-.content-boven {
-  display: flex;
-  height: 50%;
-  padding: 10px;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-  align-self: stretch;
+#app section #circle div:nth-child(8) {
+  transform: translate(calc(-50% + -369.5518130045%), calc(-50% + 153.073372946%));
 }
-
-.content-logo-container {
-  display: flex;
-  height: 300px;
-  width: 300px;
-  padding: 10px;
-  align-items: flex-start;
-  gap: 10px;
-  background-color: var(--logo-rood);
+#app section #circle div:nth-child(9) {
+  transform: translate(calc(-50% + -400%), calc(-50% + 0%));
 }
-
-.content-logo {
-  height: 300px;
-  width: 300px;
-  background: url(../images/LasTapas.svg) 50% / contain no-repeat;
+#app section #circle div:nth-child(10) {
+  transform: translate(calc(-50% + -369.5518130045%), calc(-50% + -153.073372946%));
 }
-
-.content-midden {
-  display: flex;
-  height: 30%;
-  padding: 10px;
-  justify-content: center;
-  align-items: center;
-  align-self: stretch;
+#app section #circle div:nth-child(11) {
+  transform: translate(calc(-50% + -282.8427124746%), calc(-50% + -282.8427124746%));
 }
-
-.content-tekst {
-  display: flex;
-  width: 70%;
-  height: 100%;
-  justify-content: center;
-  align-items: center;
-  color: #fff;
-  text-align: center;
-  font-family: "League Spartan";
-  font-size: 30px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: normal;
-  letter-spacing: 2.4px;
+#app section #circle div:nth-child(12) {
+  transform: translate(calc(-50% + -153.073372946%), calc(-50% + -369.5518130045%));
 }
-
-.content-onder {
-  display: flex;
-  height: 30%;
-  padding: 10px;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-  align-self: stretch;
+#app section #circle div:nth-child(13) {
+  transform: translate(calc(-50% + 0%), calc(-50% + -400%));
 }
-
-.start-button {
-  display: flex;
-  width: 30%;
-  height: 25%;
-  padding: 10px;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-  background-color: var(--primary-color);
-  color: #fbfbfb;
-  text-align: center;
-  font-family: "League Spartan";
-  font-size: 32px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: normal;
-  letter-spacing: 3.2px;
-  border-radius: 3px;
-  border-color: white;
-  border-width: 5px;
+#app section #circle div:nth-child(14) {
+  transform: translate(calc(-50% + 153.073372946%), calc(-50% + -369.5518130045%));
 }
-
-.onder-container {
-  display: flex;
-  width: 100%;
-  height: 10%;
-  justify-content: center;
-  align-self: center;
-  left: 1px;
+#app section #circle div:nth-child(15) {
+  transform: translate(calc(-50% + 282.8427124746%), calc(-50% + -282.8427124746%));
 }
-
-.onder-style {
-  display: flex;
-  width: 900px;
-  height: 50px;
-  justify-content: center;
-  align-items: center;
-  background: url(../images/onderstyle.png) 50% / cover no-repeat;
+#app section #circle div:nth-child(16) {
+  transform: translate(calc(-50% + 369.5518130045%), calc(-50% + -153.073372946%));
+}
+#app section #circle div.selected {
+  background-color: orange;
+}
+#app section #circle div.invalid {
+  background-color: red;
+}
+#app section #circle div.correct {
+  background-color: green;
+}
+#app section #circle button#startButton {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 10px 20px;
+  border: 1px solid black;
+  border-radius: 10px;
+  background-color: #a62f1e;
+  color: white;
+  font-weight: bold;
+  cursor: pointer;
+  z-index: 10;
+  transition: background-color 0.3s;
+  width: 50%;
+  height: 20%;
+}
+#app section #circle button#startButton:hover {
+  background-color: #7b2316;
 }
